fixed bugs and added postman tests
